form reset & add delete btn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header__img">
         <img src="images/BMICLogo.png" alt="">
       </div>
-      <div class="header__content">
+      <form class="header__content">
         <label for="">
           <h2 class="header__content__title">身高 cm</h2>
           <input type="text" name="" id="js--height" placeholder="請輸入身高">
@@ -24,7 +24,7 @@
           <h2 class="header__content__title">體重 kg</h2>
           <input type="text" name="" id="js--weight" placeholder="請輸入體重">
         </label>
-      </div>
+      </form>
       <div class="resultbtnWrap">
         <div class="header__result__inputwrap">
           <input type="button" class="header__result--basic  header__resultBtn" value="看結果" id="resultBtn">
@@ -63,7 +63,7 @@
           </div>
         </li>
       </ul>
-      <h3 class="main__delete">刪除第 <input type="text" id="listDelete" class="main__delete__txt"> 筆資料</h3>
+      <input type="button" value="刪除全部資料" class="main__delete">
     </div>
   </div>
   <div class="footer">
